--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Home
 layout: default
 ---
 
-<div class=two-columns>
+<div class=column>
     <div class=left-column>
         <div class=hi>
             <h1>Hi, I’m Raul</h1>
@@ -26,17 +26,6 @@ layout: default
             <p>{{ post.description }}</p>
             {% endfor %}
             <a href="{{ site.baseurl }}/blog" class=all>See all blog posts</a>
-        </div>
-    </div>
-    <div class=right-column>
-        <div class="projects-column">
-            <h2>Stuff I've done</h2>
-            <a href=https://www.geekmag.es/ class=project>
-                <div class=project-borders>
-                    <img src=/assets/images/GeekMag.png alt="Screenshot of GeekMag" class=screenshot>
-                    <b>GeekMag</b> is an online publication focused on technology, science, movies and videogames.
-                </div>
-            </a>
         </div>
     </div>
 </div>
