--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 
 <div class=column>
         <div class=hi>
-            <h1>Hi, I’m Raul</h1>
-            <p>I’m almost a Telecommunication Technologies Engineer living in Spain.</p>
-            <p>I consider myself a full-time learner.</p>
+            <h1>Hi! My name is Daniel</h1>
+            <p>I'm a Telematis Engineering student at King's Juan Carlos University.</p>
+            <p></p>
         </div>
         <div class=sites-list>
             <ul>
