--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
         </div>
         <div class=recent-blog-posts>
             <h2>Recent blog posts</h2>
+            <p>I'll post here my recent creations</p>
             {% for post in site.posts limit:4 %}
             <a href="{{ post.url | prepend: site.baseurl }}"><h4 class=title>{{ post.title }}</h4></a>
             <p>{{ post.description }}</p>
