--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
        <div class=left-column>
         <div class=hi>
             <h1>Hi! My name is Daniel</h1>
-            <p>I'm a Telematics Engineering student at King's Juan Carlos University.</p>
+            <p>I'm a Telematics Engineering student at Rey Juan Carlos University.</p>
         </div>
         <div class=sites-list>
             <ul>
